--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,27 @@
 				"isDefault": true
 			},
 			"problemMatcher": [],
-			"label": "dotnet: build"
+			"label": "Build CSJava"
+		},
+		{
+			"label": "Run CSJava",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"run",
+				"--project=src/CSJava/CSJava.csproj"
+			],
+			"group": {
+				"kind": "none",
+				"isDefault": false
+			},
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared"
+			},
+			"problemMatcher": []
 		}
 	]
 }
